# shuffler

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
shuffler/: cli.py
shuffler/modules/: spotify.py
tests/unit/: test_cli.py  test_spotify.py
