[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shuffler"
version = "0.1.0"
description = "A simple shuffling tool"
authors = [
    {name="marlonxteban", email="marlonxteban@gmail.com"},
]
readme = "README.md"
license = { text="Creative Commons Zero v1.0 Universal" }
requires-python = ">=3.12"
dependencies = [
    "click",
    "pydantic",
    "black",
]

[project.scripts]
shuffler = "shuffler.cli:cli"

[tool.hatch.build.targets.sdist]
include = ["README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]

[tool.pytest.ini_options]
addopts = "--cov=shuffler --cov-report=term-missing"

[tool.coverage.run]
omit = []
plugins = []

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
]